# hyperquant

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  config.yaml  docker-compose.yaml  main.py  pyproject.toml
.github/workflows/: ci.yaml
backtest/: __main__.py  data_loader.py  engine.py  metrics.py  report.py  run.py  simulated_executor.py  trade_log.py
core/: event_bus.py  events.py
data/: feeder.py  store.py  symbol_filter.py
docs/superpowers/plans/: 2026-03-14-hyperliquid-trend-following.md  2026-03-15-backtesting-system.md
docs/superpowers/specs/: 2026-03-14-hyperliquid-trend-following-design.md  2026-03-15-backtesting-system-design.md
execution/: order_executor.py  position_sizer.py  risk_manager.py
notify/: telegram.py
portfolio/: tracker.py
strategy/: base.py  indicators.py  scorer.py  signal_engine.py
tests/: test_backtest_engine.py  test_backtest_integration.py  test_config.py  test_data_loader.py  test_event_bus.py  test_events.py  test_feeder.py  test_indicators.py  test_metrics.py  test_order_executor.py  test_position_sizer.py  test_report.py  test_risk_manager.py  test_scorer.py  test_signal_engine.py  test_simulated_executor.py  test_store.py  test_strategy_base.py  test_symbol_filter.py  test_telegram.py  test_time_injection.py  test_tracker.py  test_trade_log.py
utils/: config.py  logger.py
