[project]
name = "hyperquant"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "hyperliquid-python-sdk>=0.4",
    "pandas>=2.0",
    "numpy>=1.24",
    "ta>=0.11",
    "aiosqlite>=0.19",
    "python-telegram-bot>=21.0",
    "structlog>=24.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
